[lab1] Add PUSH command.