@@ -4,6 +4,8 @@ import ru.nsu.fit.commands.Command;
 import ru.nsu.fit.exceptions.CommandCreationException;
 
 import java.io.IOException;
+import java.io.InputStream;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Properties;
 
 public class CommandFactory {
@@ -11,11 +13,12 @@ public class CommandFactory {
         Properties configuration = new Properties();
         Command command;
 
-        try {
-            configuration.load(CommandFactory.class.getClassLoader().getResourceAsStream("config.properties"));
-            Class c = Class.forName(configuration.getProperty(commandName));
-            command = (Command) c.newInstance();
-        } catch (IOException | ClassNotFoundException | InstantiationException | IllegalAccessException except) {
+        try (InputStream stream = CommandFactory.class.getClassLoader().getResourceAsStream("config.properties")) {
+            configuration.load(stream);
+            Class<?> c = Class.forName(configuration.getProperty(commandName));
+            command = (Command) c.getConstructor().newInstance();
+        } catch (NullPointerException | ClassNotFoundException | InstantiationException | IllegalAccessException |
+                 IOException | NoSuchMethodException | InvocationTargetException except) {
             throw new CommandCreationException(commandName);
         }
 
